--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <div class="calculator">
@@ -29,6 +30,7 @@
         <button class="btn op" onclick="Display('+')">+</button>
         <button class="showp" onclick="showPreviousCalculations()">Show Previous</button>
     </div>
+    <a href="test.htm"></a>
     <script src="script.js"></script>
 </body>
 </html>
